added Beginning JavaScript page numbers to comments

--- a/ch5_examp1.html
+++ b/ch5_examp1.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Using indeOf()  It takes two parameters. 1) The string that you would like to find and 2) The character position to start searching from. (The last paramter is optional...when omitted, it starts from beginning of string provided.) -->
+<!-- Using indeOf()  It takes two parameters. 1) The string that you would like to find and 2) The character position to start searching from. (The last paramter is optional...when omitted, it starts from beginning of string provided.) page 140-143-->
 <html>
 <head>
 	<title>Chapter 5: Example 1</title>
