--- a/Ch5_example4.html
+++ b/Ch5_example4.html
@@ -6,8 +6,9 @@
 </head>
 <body>
   <script>
+    <!-- get number to be rounded -->
     var myNumber = prompt("Enter the number to be rounded", "");
-
+    <!-- make table to display various rounded numbers -->
     document.write("<h3>The number your entered was " + myNumber + "</h3><br />");
     document.write("<p> the rounding results for this number are</p>");
     document.write("<table width-'150' border='1'>");
